aoc/intcode/objects/Intcode_Processor__c/Intcode_Processor__c.object-meta.xml
<CustomObject>
    <label>Intcode Processor</label>
    <nameField>
        <label>Intcode Processor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intcode Processors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>