aoc/intcode/objects/Intcode_Processor__c/fields/Advent_of_Code_Problem__c.field-meta.xml
<CustomField>
    <fullName>Advent_of_Code_Problem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advent of Code Problem</label>
    <referenceTo>Advent_of_Code_Problem__c</referenceTo>
    <relationshipLabel>Intcode Processors</relationshipLabel>
    <relationshipName>Intcode_Processors</relationshipName>
    <type>Lookup</type>
</CustomField>