aoc/intcode/objects/Intcode_Processor__c/fields/Memory__c.field-meta.xml
<CustomField>
    <fullName>Memory__c</fullName>
    <label>Memory</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>