aoc/intcode/objects/Intcode_Processor__c/fields/Pointer__c.field-meta.xml
<CustomField>
    <fullName>Pointer__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pointer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>